--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
           <div class="head-wrap">
           <!--アイコンのやつ↓-->
-            <a class="top-link" href="/"><img src="c:\Users\USER\Downloads\R.png" /></a>
+            <a class="top-link" href="/"><img src="/images/R.png" /></a>
           </div>
           <nav class="nav-menu">
             <a class="nav-link" href="#profile">Profile</a>
@@ -28,18 +28,14 @@
         </header>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="c:\Users\USER\Downloads\photo0000-5601.jpg" /></div>
-              <!-- <div class="swiper-slide"><img src="c:\Users\USER\Downloads\S__33595464.jpg" /></div> -->
-              <!-- <div class="swiper-slide"><img src="c:\Users\USER\Downloads\S__33595466.jpg" /></div> -->
-              <!-- <div class="swiper-slide"><img src="c:\Users\USER\Downloads\S__33595467.jpg" /></div> -->
-              <!-- <div class="swiper-slide"><img src="c:\Users\USER\Downloads\S__33595468.jpg" /></div> -->
+              <div class="swiper-slide"><img src="/images/photo0000-5601.jpg" /></div>
             </div>
             <h1 class="top-title">YOKOSUKA</h1>
           </div>
           <section class="profile" id="profile">
             <h2 class="section-title">横須賀市の歴史</h2>
             <div class="container">
-              <img class="profile-image" src="c:\Users\USER\Downloads\OIP.jpg" alt="profile-photo" />
+              <img class="profile-image" src="/images/OIP.jpg" alt="profile-photo" />
               <div class="profile-text">
                 <p>横須賀は、神奈川県に位置する港町であり、日本の歴史において海軍基地や外交関係の中心地として知られています。以下に、横須賀の歴史の要点を簡単に紹介します。
 
@@ -64,7 +60,7 @@
               <div class="item">
                 <h3 class="item-title">イベント</h3>
                 <a href="https://www.cocoyoko.net/event/" target="_blank">
-                    <img class="cover" src="c:\Users\USER\Downloads\watermark.jpg" />
+                    <img class="cover" src="/images/watermark.jpg" />
                 </a>
                 <p>
                     横須賀は海軍基地があり、海に関連するイベントや祭りが行われることがあります。また、観光地としては「三笠公園」や「長浜海水浴場」があり、これらのエリアでも様々な催し物や行事が開催されることがあります。
@@ -74,7 +70,7 @@
             <div class="item">
               <h3 class="item-title">YouTube</h3>
               <a href="https://www.youtube.com/@yokosukacityoffice" target="_blank">
-                  <img class="cover" src="c:\Users\USER\Downloads\youtube.png" />
+                  <img class="cover" src="/images/youtube.png" />
               </a>
               <p>
                   横須賀のYouTubeチャンネルでは横須賀市のイベント・ダンス・歴史・食べ物・アート・歌・など様々な横須賀の魅力について発信しています。
@@ -85,7 +81,7 @@
           <div class="item">
             <h3 class="item-title" style="font-size: 18px;">観光スポット一覧</h3>
             <a href="https://www.cocoyoko.net/spot/" target="_blank">
-                <img class="cover" src="c:\Users\USER\Downloads\photo0000-5605.jpg" />
+                <img class="cover" src="/images/photo0000-5605.jpg" />
             </a>
             <p>
                 横須賀は海軍基地のある港町で、観光スポットが点在しています。「三笠公園」では、戦艦三笠をはじめとする歴史的な艦船が展示され、海軍の歴史に触れることができます。また、「長浜海水浴場」は美しい砂浜で知られ、夏季には海水浴やマリンスポーツが楽しめます。横須賀美術館やノスタルジックトレインも訪れる価値があります。ショ
